--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="text-animation">
                 <h2 class="multiple-text">Frontend Developer</h2>
             </div>
-    <p>I’m a second-year B.Tech CSE student with a strong passion for software development. Skilled <br> in HTML, CSS, JavaScript, React, C, C++, and Data Structures & Algorithms. Currently working  <br>with  MERN and Redux Toolkit, and learning Java.</p>
+    <p>I’m a Prefinal-year B.Tech CSE student with a strong passion for software development. Skilled <br> in HTML, CSS, JavaScript, React, C, C++, and Data Structures & Algorithms. Currently working  <br>with  MERN Technologies.</p>
             <div class="btn-section">
                 <button class="btn">
                     <div style="height: 49px; width: 70px; display: flex; justify-content: center; align-items: center;">
-                   <a href="https://drive.google.com/file/d/1dghDYxzvsF7kEHzY8Qqdc-VDnRvZXMjX/view?usp=drive_link"><div style="height: 40px; width: 70px; display: flex; justify-content: center; align-items: center;margin: 0;">Resume</div></a> </div>
+                   Resume</div> 
                 </button>
                 <button class="btn">Connect with me</button>
             </div>
@@ -70,7 +70,7 @@
             <div class="about-point">
                 <p> <i class="fa-solid fa-arrow-right" style="color:#a44cd7 ;"></i>
                      Experienced in web development with hands-on expertise in HTML, CSS, JavaScript,
-                    React, and Redux Toolkit for <br>front-end, and learning MERN stack for backend development,
+                    React and  framer motion  for <br>front-end, and learning MERN stack for backend development,
                    enabling me to build dynamic, interactive, and user-friendly full-stack applications.</p>
             </div>
         
@@ -97,7 +97,7 @@
   <div class="wrapper">
     <div class="skill-item" style="background-image: url('../assets/cpp-removebg-preview (2).png');"></div>
     <div class="skill-item" style="background-image: url('../assets/cl.png');"></div>
-    <div class="skill-item" style="background-image: url('../assets/Python-removebg-preview.png');"></div>
+    <div class="skill-item" style="background-image: url('../assets/Tailwind_CSS_Logo.svg.png');"></div>
     <div class="skill-item" style="background-image: url('../assets/jsC1-removebg-preview.png');"></div>
 
     <div class="skill-item" style="background-image: url('../assets/h5__1_-removebg-preview.png');"></div>
@@ -126,7 +126,7 @@
                 </div>
                 <figcaption class="cardd_title"><div class="desc">
                     <h2>Leetcode</h2>
-                <h3>Solved 450+ questions alongwith 8 badges</h3>
+                <h3>Solved 550+ questions alongwith maxRating 0f 1600+</h3>
                 </div>
                 </figcaption>
             </figure>
@@ -183,7 +183,7 @@
                 <div class="card-content">
                  
                     <h3>Green Rank</h3>
-                    <p><a href="https://drive.google.com/file/d/1GWbiRQXpewdf7F8c49QFSCQ-5xQ72jOw/view?usp=drive_link">View <i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+                    <p><a href="https://greenrank.netlify.app/">View <i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
                 </div>
             </div>
         </div>
